syntax = "proto3";

package sprints.v1;

import "profile/v1/profile.proto";
import "util/search.proto";

option go_package = "github.com/bibz-project/gile-back/libs/proto/sprints/v1";

// ============================================================================
// REQUEST/RESPONSE MESSAGES (aligned with workspace style)
// ============================================================================

message CreateSprintRequest {
  string ownerId = 1;
  CreateSprintDto dto = 2;
}

message SearchSprintsRequest {
  util.SearchQuery params = 1;
  optional string userId = 2;
}

message SearchSprintsResponse {
  repeated Sprint items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message GetSprintByIdRequest {
  string id = 1;
  optional string userId = 2;
  optional bool includeMetrics = 3;
}

message GetSprintsOverviewRequest {
  util.SearchQuery params = 1;
  string userId = 2;
  int32 projectId = 3;
}

message GetSprintsOverviewResponse {
  repeated SprintOverview items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message UpdateSprintRequest {
  string id = 1;
  UpdateSprintDto dto = 2;
  optional string updatedBy = 3;
}

message DeleteSprintRequest {
  string id = 1;
  optional string deletedBy = 2;
}

message DeleteSprintResponse {
  bool success = 1;
}

message FindByProjectRequest {
  util.SearchQuery params = 1;
  int32 projectId = 2;
  optional string userId = 3;
}

message FindByProjectResponse {
  repeated Sprint items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message FindActiveSprintRequest {
  optional string workspaceId = 1;
  optional int32 projectId = 2;
  optional bool includeMetrics = 3;
  optional string userId = 4;
}

// ============================================================================
// DTOs (aligned with libs/shared/types/src/sprints/dtos.ts)
// ============================================================================

message CreateSprintDto {
  string name = 1;
  optional string description = 2;
  int32 project_id = 3;
  string start_date = 4;
  optional string end_date = 5;
  optional string status = 6;
  optional int32 velocity = 7;
  optional int32 capacity = 8;
  optional double version = 9;
}

message UpdateSprintDto {
  optional string name = 1;
  optional string description = 2;
  optional string start_date = 3;
  optional string end_date = 4;
  optional string actual_start_date = 5;
  optional string actual_end_date = 6;
  optional double version = 7;
  optional string status = 8;
  optional int32 velocity = 9;
  optional int32 capacity = 10;
  optional string review_notes = 11;
  optional string retrospective_notes = 12;
}

message Sprint {
  int32 id = 1;
  string name = 2;
  optional string slug = 3;
  optional string description = 4;
  int32 project_id = 5;
  string start_date = 6;
  optional string end_date = 7;
  optional string actual_start_date = 8;
  optional string actual_end_date = 9;
  optional int32 velocity = 10;
  optional int32 capacity = 11;
  double version = 12;
  string status = 13;
  optional string review_notes = 14;
  optional string retrospective_notes = 15;
  optional string created_by = 16;
  optional string updated_by = 17;
  string created_at = 18;
  optional string updated_at = 19;
  optional profile.v1.ProfileOverview created_by_user = 20;
  optional profile.v1.ProfileOverview updated_by_user = 21;
}

message SprintOverview {
  int32 id = 1;
  string name = 2;
  optional double version = 3;
  string status = 4;
}

// ============================================================================
// SERVICE
// ============================================================================

service SprintsService {
  rpc Create(CreateSprintRequest) returns (Sprint);
  rpc Search(SearchSprintsRequest) returns (SearchSprintsResponse);
  rpc GetById(GetSprintByIdRequest) returns (Sprint);
  rpc GetOverview(GetSprintsOverviewRequest) returns (GetSprintsOverviewResponse);
  rpc FindByProject(FindByProjectRequest) returns (FindByProjectResponse);
  rpc FindActiveSprint(FindActiveSprintRequest) returns (Sprint);
  rpc Update(UpdateSprintRequest) returns (Sprint);
  rpc Delete(DeleteSprintRequest) returns (DeleteSprintResponse);
}
